# status4fpb

./: .gitattributes  README.md  index.html  package-lock.json  package.json
docs/: asset-license-candidates.md  continuity.md  icon-branding-plan.md  mvp-acceptance.md  pixel-town-implementation-plan.md  pixel-town-merge-readiness.md  pixel-town-placeholder-map.md  pixel-town-visual-direction.md  product-design.md  qq-bot-command-research.md  release-checklist.md  review-checklist.md  shared-sync-code-readiness.md  shared-sync-ui-storage-weblink-plan.md  shared-town-sync-api-contract.md  shared-town-sync-architecture.md  shared-town-sync-implementation-plan.md  shared-town-sync-local-mock-plan.md  shared-town-sync-phase2-readiness.md  shared-town-sync-privacy-review.md  tauri-productization-plan.md  tauri-tray-manual-checklist.md  tauri-tray-spike.md  technical-plan.md
docs/adr/: 0001-close-to-tray-behavior.md  0002-desktop-storage-strategy.md  0003-shared-town-credential-storage.md
docs/releases/: v0.1.0-mvp.md
src/: App.css  App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: createMemberId.ts  useLocalSharedTownDemo.test.ts  useLocalSharedTownDemo.ts  usePixelHomeApp.ts
src/components/: AddMemberForm.test.tsx  AddMemberForm.tsx  MemberMarker.test.tsx  MemberMarker.tsx  MemberStatusCard.test.tsx  MemberStatusCard.tsx  PixelHomeMap.test.tsx  PixelHomeMap.tsx  SharedTownDemoPanel.test.tsx  SharedTownDemoPanel.tsx  StatusButtonGroup.test.tsx  StatusButtonGroup.tsx  (+3 more)
tests/: tauriShellConfig.test.ts
(+35 files in other folders)
